src/objects/ProfileSkill.object
<CustomObject>
    <fields>
        <fullName>Skill_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Skill Category that is related to the selected Skill Group</errorMessage>
            <filterItems>
                <field>$Source.Skill_Group__c</field>
                <operation>equals</operation>
                <valueField>Skill_Category__c.Skill_Group__c</valueField>
            </filterItems>
            <infoMessage>This list of Skill Categories has been filtered based on the selected Skill Group</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Skill_Category__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Skill Group</label>
        <referenceTo>Skill_Group__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Skill Type that is related to the selected Skill Category</errorMessage>
            <filterItems>
                <field>$Source.Skill_Category__c</field>
                <operation>equals</operation>
                <valueField>Skill_Type__c.Skill_Category__c</valueField>
            </filterItems>
            <infoMessage>This list of Skill Types has been filtered based on the selected Skill Category</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Skill_Type__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>